syntax = "proto3";

//import "message.proto";

package proto;

message InitEndpointRequest {
    uint32 stub_server = 1;
    bytes config = 2;
}

message InitEndpointResponse {}

message SendRequest {
    bytes message = 1;
}

message SendResponse {
    bytes response = 1;
}

message ReceiveRequest {
}

message ReceiveResponse {
    string tag = 1;
    bytes message = 2;
}

message AckRequest {
    string tag = 1;
    bytes response = 2;
}

message AckResponse {}

message NackRequest {
    string tag = 1;
    string error = 2;
}

message NackResponse {}

message CloseRequest {
}

message CloseResponse {}

service Endpoint {
    rpc Init(InitEndpointRequest) returns (InitEndpointResponse);
    rpc Send(SendRequest) returns (SendResponse);
    rpc Receive(ReceiveRequest) returns (ReceiveResponse);
    rpc Ack(AckRequest) returns (AckResponse);
    rpc Nack(NackRequest) returns (NackResponse);
    rpc Close(CloseRequest) returns (CloseResponse);
}
